Perfecting the already perfect!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,13 @@
 [project]
 name = "rag"
 version = "0.1.0"
-description = "Add your description here"
+description = "Langchain Streamlit Rag App"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
 "streamlit",
+"langchain",
+"langchain-community",
 "langchain-google-genai",
 "google-generativeai",
 "faiss-cpu",
